--- a/meetups/30/index.html
+++ b/meetups/30/index.html
@@ -60,7 +60,15 @@
     </div>
 
     <div class="step slide" data-x="1000" data-y="-1500">
-        <q>Anything else to add here?</q>
+        <q>
+            <p>Kata - ListOps</p>
+        </q>
+            <br />
+            <br />
+            <p>
+            <img src="https://pbs.twimg.com/profile_images/485519357078818816/oP2c-y1u.jpeg" height="300" />
+            Hugo Duksis
+            </p>
     </div>
 </div>
 <script>
