--- a/meetups/30/index.html
+++ b/meetups/30/index.html
@@ -29,7 +29,7 @@
     <div class="step slide" data-x="-2000" data-y="-1500">
         <q>
             <h1>Welcome to Elixir Berlin #30</h1>
-            TODO: add some text here and also mention the host
+            Thanks to our todays hosts "solarisBank" and to all of you for coming!
         </q>
     </div>
 
