--- a/meetups/30/index.html
+++ b/meetups/30/index.html
@@ -33,8 +33,22 @@
         </q>
     </div>
 
+    <div class="step slide" data-x="-1000" data-y="-1500">
+        <b>Annoncments</b>
+        <br/>
+        <br/>
+        <br/>
+        ∙ http://elixir.berlin (thanks to bitcrowd GmbH)
+        <br/>
+        <br/>
+        ∙ Arranging talks in Github
+        <br/>
+        <br/>
+        ∙ We are in FB and G+ !
+    </div>
 
-    <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
+
+    <div id="bored" class="step slide" data-x="0" data-y="-1500">
         <q>
             <p>Flow and Genstage</p>
         </q>
@@ -47,7 +61,7 @@
 
     </div>
 
-    <div class="step slide" data-x="0" data-y="-1500">
+    <div class="step slide" data-x="1000" data-y="-1500">
         <q>
             Elixir 1.4 ChangeLog
         </q>
@@ -59,7 +73,7 @@
         </p>
     </div>
 
-    <div class="step slide" data-x="1000" data-y="-1500">
+    <div class="step slide" data-x="2000" data-y="-1500">
         <q>
             <p>Kata - ListOps</p>
         </q>
