--- a/meetups/34/index.html
+++ b/meetups/34/index.html
@@ -23,7 +23,7 @@
 <div id="impress">
 
     <div class="step" data-x="-2000" data-y="-1500" data-scale="1">
-        <img src="/images/34-banner.jpg" height="400px">
+        <img src="https://pbs.twimg.com/profile_banners/1579940232/1491229790/1500x500" height="400px">
     </div>
 
     <div class="step slide" data-x="-2000" data-y="-1500">
